删了几个字

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         </datalist>
         <button>获取</button>
     </div>
-    <footer>无郭友人鼓句始分陀要历都事赏三，了病皇而嗣，者回气传自绛太之，在并自意不磊原拆然自皇得婵然谢这，害慧的秦奔让交一云君惊后的为，今极光说给便贼，孔君会无普谭，外有为，杀是总言穿宋明我是，日总雷掉全秦命策，揽釜相亡，是可家家订大如人了属子火作疾若愚，手感你家。</footer>
+    <footer>无然谢这，害慧的秦奔让交一云君惊后的为，今极光说给便贼，孔君会无普谭，外有为，杀是总言穿宋明我是，日总雷掉全秦命策，揽釜相亡，是可家家订大如人了属子火作疾若愚，手感你家。</footer>
 </body>
 </html>
